Update UI, auth pages, orders, pantry, and recipes

--- a/src/App.css
+++ b/src/App.css
@@ -180,7 +180,7 @@ body {
 
 .page--pantry {
   background: linear-gradient(135deg, #f8fff7cc, #fff7e8dd),
-    url("https://images.pexels.com/photos/4109964/pexels-photo-4109964.jpeg?auto=compress&cs=tinysrgb&w=1200");
+    url("https://images.pexels.com/photos/842571/pexels-photo-842571.jpeg");
   background-size: cover;
   background-position: center;
 }
@@ -266,4 +266,101 @@ body {
 
 .page-wrapper {
   min-height: 100vh;
+}
+
+
+/*LOGIN*/
+
+.auth-page {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(135deg, #fff7e8dd, #ffffffcc);
+}
+
+.auth-card {
+  width: 520px;
+  background: rgba(225, 198, 198, 0.15);
+  padding: 40px;
+  border-radius: 22px;
+  box-shadow: 0 20px 60px rgba(20, 60, 29, 0.15);
+}
+
+.auth-card h2 {
+  font-size: 2.2rem;
+  margin-bottom: 30px;
+  color: #c80018;
+}
+
+.auth-subtitle{
+  margin-bottom: 30px;
+}
+
+
+.auth-form {
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+}
+
+.form-row {
+  display: grid;
+  grid-template-columns: 120px 1fr;
+  align-items: center;
+  gap: 14px;
+}
+
+.form-row label {
+  font-weight: 600;
+  color: #2c2c2c;
+}
+
+.form-row input {
+  padding: 14px;
+  border-radius: 12px;
+  border: 1px solid #c80018;
+  font-size: 1rem;
+}
+
+.password-wrap {
+  display: flex;
+  gap: 10px;
+}
+
+.toggle-pass {
+  padding: 12px 14px;
+  border-radius: 12px;
+  border: 1px solid #c80018;
+  background: #fff7e8e6;
+  cursor: pointer;
+}
+
+.auth-btn {
+  margin-top: 20px;
+  padding: 16px;
+  font-size: 1.05rem;
+  border-radius: 16px;
+  border: none;
+  background: #9caf88;
+  color: white;
+  cursor: pointer;
+}
+
+.auth-btn:hover {
+  opacity: 0.9;
+  color:#691414
+}
+
+.auth-bottom {
+  margin-top: 18px;
+  text-align: center;
+  font-size: 0.95rem;
+}
+
+.auth-link-btn {
+  background: none;
+  border: none;
+  font-weight: 600;
+  cursor: pointer;
 }
